# C_Emulator_Assembler

./: .gitignore  32bitProcess.c  32bitProcess.h  CMakeLists.txt  Makefile  README.md  armMachine.c  armMachine.h  armMachineExec.c  armMachineExec.h  armMachineHelper.c  armMachineHelper.h  armMachineStructure.h  assemble  assemble.c  assemblerIO.c  assemblerIO.h  emulate  emulate.c  emulateIO.c  emulateIO.h  entryParser.c  entryParser.h  entryParserBody.c  entryParserBody.h  entryParserHelper.c  entryParserHelper.h  helperParser.c  helperParser.h  strIntList.c  strIntList.h
assemble.dSYM/Contents/Resources/DWARF/: assemble
emulate.dSYM/Contents/Resources/DWARF/: emulate
